# Fpaknejad.github.io

./: .gitignore  404.html  README.md  _config.yml  desktop.ini  index.html  style.css
.github/workflows/: ci.yml  pages.yml
DictAPI/german-dictionary-extension/: README.md  exampleHighlight.js  parser.js  popup.css  popup.html  popup.js  wiktionaryClient.js
DictAPI/german-dictionary-extension/tests/: parser-fixtures.mjs  run-example-highlight-tests.mjs  run-parser-tests.mjs
Dictionary ChromeExtension/: manifest.json
ExpenseTracker/: .gitignore
ExpenseTracker/src/: Expense.cpp  Expense.hpp
ExpenseTracker/web/: index.html
Hamdam/HamDam/HamDam/: ContentView.swift  HamDamApp.swift  Item.swift
Hamdam/HamDam/HamDam.xcodeproj/: project.pbxproj
Hamdam/HamDam/HamDam.xcodeproj/project.xcworkspace/xcuserdata/niuklear.xcuserdatad/: UserInterfaceState.xcuserstate
Hamdam/HamDam/HamDam.xcodeproj/xcuserdata/niuklear.xcuserdatad/xcschemes/: xcschememanagement.plist
Hamdam/HamDam/HamDamTests/: HamDamTests.swift
Hamdam/HamDam/HamDamUITests/: HamDamUITests.swift  HamDamUITestsLaunchTests.swift
Learning Stuff/: .gitignore
Learning Stuff/FlappyBird/: README.md  index.html  manifest.json  style.css
Learning Stuff/book exercises/Prof cpp Exercises/: Employee  Employee.cppm
Learning Stuff/learning JavaScript/: package.json
NotesApp/: CMakeLists.txt
NotesApp/src/: HandwritingCanvas.cpp  HandwritingCanvas.hpp  MainWindow.cpp  MainWindow.h  MainWindow.hpp  main.cpp  main_test.cpp
NotesApp/src/core/: LocalFileNoteRepository.cpp  LocalFileNoteRepository.hpp  NoteModel.cpp  NoteModel.hpp  NoteRepository.cpp  NoteRepository.hpp
NotesApp/src/domain/: NoteModel.cpp  NoteModel.hpp  NoteTypes.cpp  NoteTypes.hpp
NotesApp/src/persistence/: JsonSerializer.cpp  JsonSerializer.hpp
NotesApp/src/services/: AuthService.cpp  AuthService.hpp  HandwritingService.cpp  HandwritingService.hpp  NoteService.cpp  NoteService.hpp  TreeSyncService.cpp  TreeSyncService.hpp
NotesApp/src/ui/: HandwritingCanvas.cpp  MainWindow.cpp  MainWindow.hpp  NoteTreePanel.cpp  NoteTreePanel.hpp  PageWorkspace.cpp  PageWorkspace.hpp
PDFNotesScript/: pdfmodifier.py
PipeNetwork/pipenetwork/: MatVec.cpp  MatVec.h  classes.h  example.txt  node_and_tube.cpp  pipedata.txt  pipenet.cpp  source.cpp
Search ChromeExtension/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js
Subtitle ChromeExtention/: content.js  manifest.json  popup.html  popup.js  styles.css
TaskManagerCLI/: .gitignore  README.md
TaskManagerCLI/src/: ConsoleUI.cpp  ConsoleUI.hpp  Main.cpp  Task.h  TaskManager.cpp  TaskManager.hpp  TaskRepository.hpp
cpp_template/cpp_template_macOS/: CMakeLists.txt  README.md
cpp_template/cpp_template_macOS/src/: main.cpp
cpp_template/cpp_template_macOS/tests/: CMakeLists.txt  test_main.cpp
german-dictionary-extension/: manifest.json  parser.js  popup.js
german-dictionary-extension/icons/: README.md
